SERVER-71691 handle paused execution in setWindowFields